trunk/Archive2/6d/0e90614e152bef/output
main.cpp:12:5: error: no matching function for call to 'foo'
    foo(test());
    ^~~
main.cpp:9:6: note: candidate function not viable: expects an l-value for 1st argument
void foo(test & a){}
     ^
1 error generated.
