trunk/Archive2/6d/0e90614e152bef/main.cpp
#include <tuple>
#include <vector>
#include <iostream>

struct test
{
};

void foo(test & a){}
int main()
{
    foo(test());
}
